# raytrace3d

./: .gitignore  CMakeLists.txt  asst2.cpp  asst3.cpp  main.cpp
engine/: CMakeLists.txt  Camera.cpp  Camera.h  Consts.h  Engine.cpp  Engine.h  Object.cpp  Object.h  World.cpp  World.h
engine/animation/: AColor.h  ADecompose.h  AShowCreation.h  AShowUncreation.h
engine/geometry/: Mesh.cpp  Mesh.h  Plane.cpp  Triangle.cpp  Triangle.h
engine/io/: Image.cpp  Image.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Screen.cpp  Screen.h
engine/io/SDL/include/SDL3/: SDL_hints.h
engine/io/SDL/src/test/: SDL_test_common.c
engine/io/SDL/src/video/qnx/: SDL_qnxvideo.c
engine/io/SDL/src/video/wayland/: SDL_waylandwindow.c
engine/io/SDL/src/video/winrt/: SDL_winrtvideo.cpp
engine/linalg/: Color.cpp  Color.h
engine/objects/: Camera.cpp  Camera.h  Object.cpp  Object.h
engine/objects/geometry/: Mesh.cpp  Mesh.h  Plane.cpp  Sphere.cpp  Triangle.cpp  Triangle.h
engine/physics/: RigidBody.h
engine/utils/: LibPNG.cpp  LibPNG.h  ObjectController.cpp  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h
homeworks/asst1/: info.txt
homeworks/asst1/CS248-OF-template/: ofApp.cpp  ofApp.h
homeworks/asst2/: info.txt
